@@ -28,7 +28,6 @@ class TermInLangIdsResolverFactoryTest extends MediaWikiIntegrationTestCase {
 		'he' => 'שלום עולם',
 	];
 
-	private const MOCK_TYPE_LABEL = 1;
 	/**
 	 * @var array
 	 */
@@ -44,15 +43,6 @@ class TermInLangIdsResolverFactoryTest extends MediaWikiIntegrationTestCase {
 		if ( !WikibaseSettings::isRepoEnabled() ) {
 			$this->markTestSkipped( "Skipping because WikibaseClient doesn't have local term store tables." );
 		}
-
-		$this->getDb()->newInsertQueryBuilder()
-			->insertInto( 'wbt_type' )
-			->row( [
-				'wby_id' => self::MOCK_TYPE_LABEL,
-				'wby_name' => 'label',
-			] )
-			->caller( __METHOD__ )
-			->execute();
 
 		$fname = __METHOD__;
 		$this->termIds = array_map(
@@ -77,7 +67,7 @@ class TermInLangIdsResolverFactoryTest extends MediaWikiIntegrationTestCase {
 				$this->getDb()->newInsertQueryBuilder()
 					->insertInto( 'wbt_term_in_lang' )
 					->row( [
-						'wbtl_type_id' => self::MOCK_TYPE_LABEL,
+						'wbtl_type_id' => TermTypeIds::LABEL_TYPE_ID,
 						'wbtl_text_in_lang_id' => $this->getDb()->insertId(),
 					] )
 					->caller( $fname )
